clang/test/BSC/Negative/NullabilityCheck/init/array_field_init.cbs
// RUN: %clang_cc1 -nullability-check=all -verify %s

struct S1 {
  int *_Nonnull p1[2];
  int *_Borrow p2[2];
};

void test1() {
  int a = 1, b = 2;
  int* p = &a;
  int* _Borrow q1 = &_Mut a;
  int* _Borrow q2 = &_Mut b;

  struct S1 s0 = {
    .p1 = {p, p},
    .p2 = {q1, q2}
  };
  struct S1 s1 = { // expected-error {{nonnull pointer cannot be assigned by nullable pointer}}
    .p1 = {nullptr, nullptr},
    .p2 = {nullptr, nullptr}
  };
  struct S1 s2 = { // expected-error {{type contains nonnull pointer must be properly initialized}} expected-error {{nonnull pointer cannot be assigned by nullable pointer}}
    .p1 = {nullptr},
    .p2 = {nullptr}
  };
  struct S1 s3 = { // expected-error {{type contains nonnull pointer must be properly initialized}}
    .p1 = {p},
    .p2 = {q1}
  };
  struct S1 s4 = { // expected-error {{nonnull pointer cannot be assigned by nullable pointer}}
    .p1 = {p, nullptr},
    .p2 = {q1, nullptr}
  };
  struct S1 s5 = { // expected-error {{nonnull pointer cannot be assigned by nullable pointer}}
    .p1 = {nullptr, p},
    .p2 = {nullptr, q1}
  };
  struct S1 s6 = { // expected-error {{type contains nonnull pointer must be properly initialized}}
    .p1 = {},
    .p2 = {}
  };
  struct S1 s7 = {}; // expected-error {{type contains nonnull pointer must be properly initialized}}
}
